--- a/views/partials/pages/issue.handlebars
+++ b/views/partials/pages/issue.handlebars
@@ -148,7 +148,6 @@
                         <input name="logDateTime" class="form-control" id="date-time-picker-input" placeholder="pick worklog start time" data-format="MM/dd/yyyy HH:mm PP" type="text">
                         <span class="input-group-addon glyphicon glyphicon glyphicon-time form-control-feedback" aria-hidden="true"></span>
                     </div>
-
                 </div>
 
                 <div class="form-group">
@@ -181,6 +180,13 @@
           <div class="modal-body">
               <input type="hidden" id="edit-work-log-id" name="worklogId" value="">
               <input type="hidden" name="issueId" value="{{issue._id}}">
+              <div class="form-group log-date-time has-feedback">
+                  <div class='input-group date' id="work-log-datetimepicker" >
+                      <label for="date-time-picker-input">Date Started</label>
+                      <input name="logDateTime" class="form-control" id="date-time-picker-input" placeholder="pick worklog start time" data-format="MM/dd/yyyy HH:mm PP" type="text">
+                      <span class="input-group-addon glyphicon glyphicon glyphicon-time form-control-feedback" aria-hidden="true"></span>
+                  </div>
+              </div>
               <div class="form-group">
                   <label for="comment-text">Worklog text</label>
                   <textarea name="text" id="edit-work-log-text" placeholder="Please type your comment here" class="form-control" rows="3"></textarea>
